re PR fortran/33522 (Incorrect warning messages about uninitialized variables)

PR fortran/33522
	* trans-types.c (gfc_get_desc_dim_type): Mark artificial
	variables with TREE_NO_WARNING.
	(gfc_get_array_descriptor_base): Likewise.

From-SVN: r128673